--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/BTSharePoolTableViewCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/BTSharePoolTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -61,6 +61,7 @@
                 <outlet property="four" destination="Dfa-io-eWf" id="Ajh-wF-KsY"/>
                 <outlet property="one" destination="FJj-XZ-Heu" id="kUN-C7-qJH"/>
                 <outlet property="three" destination="vYn-ih-L0N" id="xao-BH-wTY"/>
+                <outlet property="threeLeading" destination="pGY-ci-8hJ" id="gVw-R8-Gs0"/>
                 <outlet property="two" destination="MsT-7B-Wpi" id="xXr-Kn-VPN"/>
             </connections>
             <point key="canvasLocation" x="-251" y="125"/>
