--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTSharePoolVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTSharePoolVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,8 +70,8 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKo-4U-MSx">
-                            <rect key="frame" x="69" y="70" width="38.5" height="11"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTCK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKo-4U-MSx">
+                            <rect key="frame" x="69" y="70" width="34" height="11"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="11" id="bpJ-bw-TC5"/>
                             </constraints>
@@ -211,13 +211,13 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LOU-6b-QC9">
-                            <rect key="frame" x="336" y="18" width="52" height="27"/>
+                            <rect key="frame" x="338" y="18" width="50" height="27"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="au8-aE-WDT">
-                                    <rect key="frame" x="10" y="0.0" width="32" height="27"/>
+                                    <rect key="frame" x="10" y="0.0" width="30" height="27"/>
                                     <color key="backgroundColor" red="0.6588235294" green="0.52549019610000003" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                    <state key="normal" title="12" image="collect"/>
+                                    <state key="normal" title="12"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="roundLeft" value="YES"/>
                                     </userDefinedRuntimeAttributes>
@@ -356,25 +356,19 @@
                                     <rect key="frame" x="0.0" y="40" width="390" height="40"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="倍额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="coP-QA-0f3">
-                                            <rect key="frame" x="12" y="18" width="91.5" height="15"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="级别" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIW-dD-ink">
-                                            <rect key="frame" x="103.5" y="18" width="91.5" height="15"/>
+                                            <rect key="frame" x="12" y="18" width="122" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="产量(BTCK)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nle-I2-k9O">
-                                            <rect key="frame" x="195" y="18" width="91.5" height="15"/>
+                                            <rect key="frame" x="134" y="18" width="122" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQU-xf-BuA">
-                                            <rect key="frame" x="286.5" y="18" width="91.5" height="15"/>
+                                            <rect key="frame" x="256" y="18" width="122" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -382,13 +376,10 @@
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
-                                        <constraint firstItem="LIW-dD-ink" firstAttribute="width" secondItem="coP-QA-0f3" secondAttribute="width" id="0wC-jB-aJm"/>
-                                        <constraint firstItem="nle-I2-k9O" firstAttribute="leading" secondItem="LIW-dD-ink" secondAttribute="trailing" id="5Gd-Vc-jvF"/>
-                                        <constraint firstItem="LIW-dD-ink" firstAttribute="centerY" secondItem="coP-QA-0f3" secondAttribute="centerY" id="BMC-F9-Gla"/>
+                                        <constraint firstItem="nle-I2-k9O" firstAttribute="leading" secondItem="coP-QA-0f3" secondAttribute="trailing" id="B9Z-7q-oSS"/>
                                         <constraint firstItem="nle-I2-k9O" firstAttribute="centerY" secondItem="coP-QA-0f3" secondAttribute="centerY" id="DUi-v8-OQm"/>
                                         <constraint firstItem="oQU-xf-BuA" firstAttribute="centerY" secondItem="coP-QA-0f3" secondAttribute="centerY" id="GW5-Gg-EdF"/>
                                         <constraint firstItem="nle-I2-k9O" firstAttribute="width" secondItem="coP-QA-0f3" secondAttribute="width" id="Pfj-BU-z3g"/>
-                                        <constraint firstItem="LIW-dD-ink" firstAttribute="leading" secondItem="coP-QA-0f3" secondAttribute="trailing" id="Q8y-ee-KCS"/>
                                         <constraint firstAttribute="trailing" secondItem="oQU-xf-BuA" secondAttribute="trailing" constant="12" id="WXZ-kY-lZD"/>
                                         <constraint firstItem="coP-QA-0f3" firstAttribute="top" secondItem="cXn-OI-l8j" secondAttribute="top" constant="18" id="a1Q-Tj-br3"/>
                                         <constraint firstItem="oQU-xf-BuA" firstAttribute="leading" secondItem="nle-I2-k9O" secondAttribute="trailing" id="jxu-Fh-8aZ"/>
@@ -461,7 +452,6 @@
         </view>
     </objects>
     <resources>
-        <image name="collect" width="18" height="17"/>
         <image name="icon_poolCardbj" width="354.5" height="175.5"/>
         <image name="icon_registerLogo" width="54" height="54"/>
     </resources>
